# WeatherApp

./: .env  .gitignore  .sample.env  Makefile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20230914_065810_init.py
app/: Dockerfile  main.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: air_pollution.py  weather.py  weatherandpollution.py
app/core/: config.py
app/static/: index.html
app/static/js/: script.js
app/static/react-app/src/: App.tsx
app/static/react-app/src/components/: weather.css  weather.tsx
