[tool.poetry]
name = "fastapi-boilerplate"
version = "0.1.0"
description = "FastAPI PostgreSQL Boilerplate"
authors = ["Atanas Trpcheski <Atanas.Trpcheski@loka.com>"]
readme = "README.md"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = {version = "^0.29.0", extras = ["standard"]}
gunicorn = "^22.0.0"
aiohttp = "^3.9.5"
alembic = "^1.11.1"
bcrypt = "^4.1.3"
cryptography = "^42.0.7"
requests = "^2.31.0"
tenacity = "^8.2.2"
pydantic = {version = "^2.7.1", extras=["email"]}
PyJWT = "^2.7.0"
httpx = "^0.27.0"
boto3 = "^1.34.100"
cachetools = "^5.3.1"
python-dotenv = "^1.0.0"
sqlalchemy = {version = "^2.0.21", extras = ["asyncio"]}
fastapi = "^0.111.0"
pendulum = "^3.0.0"
python-jose = "^3.3.0"
passlib = "^1.7.4"
emails = "^0.6"
python-multipart = "^0.0.9"
celery = "^5.2.7"
raven = "^6.10.0"
jinja2 = "^3.1.4"
pika = "^1.3.2"
mjml = "^0.11.0"
twilio = "^9.0.5"
sendgrid = "^6.10.0"
ujson = "^5.8.0"
redis = "^5.0.4"
asyncpg = "^0.29.0"
fastapi-events = "^0.11.1"
psycopg2-binary = "^2.9.9"
pydantic-settings = "^2.2.1"

[tool.poetry.group.dev.dependencies]
autoflake = "^2.3.1"
autopep8 = "^2.1.0"
coverage = "^7.5.1"
erdantic = "^1.0.2"
flake8 = "^7.0.0"
moto = "^5.0.6"
mypy = "^1.10.0"
pre-commit = "^3.7.0"
pyflakes = "^3.2.0"
pylint = "^3.1.0"
pytest = "^8.2.0"
requests-mock = "^1.12.1"
testcontainers = "^4.4.0"
types-requests = "^2.31.0.0"
types-urllib3 = "^1.26.25"
anyio = "^4.3.0"
faker = "^25.0.1"
typer = {extras = ["all"], version = "^0.12.3"}

[tool.mypy]
plugins = [
  "pydantic.mypy"
]

ignore_missing_imports = true
disallow_untyped_defs = true
namespace_packages = false

[tool.ruff]
# pyflakes, pycodestyle, isort
select = ["F", "E", "W", "I001"]

ignore = [
  "F401", # unused-import
  "F841", # unused-variable
  "E402", # module-import-not-at-top-of-file
  "E501", # line-too-long (black handles this)
  "E711", # none-comparison
  "E712", # true-false-comparison
]

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "alembic",
]


[tool.ruff.isort]
known-third-party = ["aiohttp", "boto3", "botocore", "dateutil", "dotenv", "erdantic", "fastapi", "json_log_formatter", "jsonschema", "jwt", "moto", "pendulum", "pydantic", "pydantic_sqlalchemy", "pygraphviz", "pytest", "requests", "requests_mock", "sqlalchemy", "starlette", "tenacity", "testcontainers"]
